[Project 2] Stable Makefile
Signed-off-by: Siddesh Shinde <sshindesiddesh@gmail.com>

--- a/ASSIGNMENT2/Makefile
+++ b/ASSIGNMENT2/Makefile
@@ -1,19 +1,19 @@
 CC=g++
-INC = -I incl
-LIBS = -lm
+LIBS=-l
 SDIR=src
-ODIR=bin
+ODIR=OBJ
 AT=@
 
-_OBJS = *.o
-OBJS = $(patsubst %,$(ODIR)/%,$(_OBJS))
-
+SRCS:=$(wildcard $(SDIR)/*.cpp)
+OBJS=$(patsubst $(SDIR)/%.cpp, $(ODIR)/%.o, $(SRCS))
+	
 $(ODIR)/%.o: $(SDIR)/%.cpp
 	$(AT)mkdir -p $(ODIR)
-	$(AT)$(CC) -c $(INC) $< -o $@ $(CFLAGS)
+	$(AT)$(CC) -c $< -o $@ $(LIBS)pcap
 
 all: $(OBJS)
-	$(AT)$(CC) -o my_dump $^
+	$(AT)$(CC) -o my_dump $^ $(LIBS)pcap
+	@echo "Created mydump"
 
 .PHONY: clean
 
