Support from including header files in include/ directory
Signed-off-by: Siddesh Shinde <sshindesiddesh@gmail.com>

--- a/ASSIGNMENT2/Makefile
+++ b/ASSIGNMENT2/Makefile
@@ -3,17 +3,19 @@ LIBS=-l
 SDIR=src
 ODIR=OBJ
 AT=@
+INC=-Iinclude
 
 SRCS:=$(wildcard $(SDIR)/*.cpp)
 OBJS=$(patsubst $(SDIR)/%.cpp, $(ODIR)/%.o, $(SRCS))
 	
 $(ODIR)/%.o: $(SDIR)/%.cpp
 	$(AT)mkdir -p $(ODIR)
-	$(AT)$(CC) -c $< -o $@ $(LIBS)pcap
+	$(AT)$(CC) $(INC) -c $< -o $@ $(LIBS)pcap
 
 all: $(OBJS)
-	$(AT)$(CC) -o my_dump $^ $(LIBS)pcap
+	$(AT)$(CC) $(INC) -o my_dump $^ $(LIBS)pcap
 	@echo "Created mydump"
+	@echo "Running mydump"
 
 .PHONY: clean
 
@@ -21,3 +23,5 @@ clean:
 	$(AT)rm -f $(ODIR)/*.o
 	$(AT)rm -rf $(ODIR)
 	$(AT)rm -rf my_dump
+run:
+	sudo ./my_dump
