[HW3] Add functions to encrypt/decrypt in AES CTR 128 bit mode
Signed-off-by: Siddesh Shinde <sshindesiddesh@gmail.com>

--- a/ASSIGNMENT3/Makefile
+++ b/ASSIGNMENT3/Makefile
@@ -10,10 +10,10 @@ OBJS=$(patsubst $(SDIR)/%.c, $(ODIR)/%.o, $(SRCS))
 	
 $(ODIR)/%.o: $(SDIR)/%.c
 	$(AT)mkdir -p $(ODIR)
-	$(AT)$(CC) $(INC) -c $< -o $@ $(LIBS)pcap
+	$(AT)$(CC) $(INC) -c $< -o $@ $(LIBS)crypto
 
 all: $(OBJS)
-	$(AT)$(CC) $(INC) -o pbproxy $^ $(LIBS)pcap
+	$(AT)$(CC) $(INC) -o pbproxy $^ $(LIBS)crypto
 
 clean:
 	$(AT)rm -f $(ODIR)/*.o
