Update Makefile for pthread
Signed-off-by: Siddesh Shinde <sshindesiddesh@gmail.com>

--- a/ASSIGNMENT3/Makefile
+++ b/ASSIGNMENT3/Makefile
@@ -13,7 +13,7 @@ $(ODIR)/%.o: $(SDIR)/%.c
 	$(AT)$(CC) $(INC) -c $< -o $@ $(LIBS)crypto
 
 all: $(OBJS)
-	$(AT)$(CC) $(INC) -o pbproxy $^ $(LIBS)crypto
+	$(AT)$(CC) $(INC) -o pbproxy $^ $(LIBS)crypto $(LIBS)pthread
 
 clean:
 	$(AT)rm -f $(ODIR)/*.o
